# img2epub

./: .gitignore  MANIFEST.in  README.md  entry_points.cfg  img2epub.py  setup.cfg  setup.py
data/: book.opf.template  container.xml  nav.xhtml
img2epub/: __init__.py  command.py  functions.py
img2epub/data/: chap1.xhtml.template
