[metadata]
name = img2epub
version = attr:img2epub.__version__
description = Generate EPUB book from image file set.
author = takatoh
author_email = takatoh.m@gmail.com
license = MIT License
classifier =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:
include_package_data = True
entry_points = file:entry_points.cfg
install_requires =
    jinja2
    click
